First version of PhrasalAppraisal
This commit is likely to be rewritten.

--- a/development.ini
+++ b/development.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:main]
-use = egg:phrasalappraisal
+use = egg:phrasal_appraisal
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
@@ -32,7 +32,7 @@ listen = 127.0.0.1:6543 [::1]:6543
 ###
 
 [loggers]
-keys = root, phrasalappraisal
+keys = root, phrasal_appraisal
 
 [handlers]
 keys = console
@@ -44,10 +44,10 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_phrasalappraisal]
+[logger_phrasal_appraisal]
 level = DEBUG
 handlers =
-qualname = phrasalappraisal
+qualname = phrasal_appraisal
 
 [handler_console]
 class = StreamHandler
