--- a/production.ini
+++ b/production.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:main]
-use = egg:phrasalappraisal
+use = egg:phrasal_appraisal
 
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
@@ -26,7 +26,7 @@ listen = *:6543
 ###
 
 [loggers]
-keys = root, phrasalappraisal
+keys = root, phrasal_appraisal
 
 [handlers]
 keys = console
@@ -38,10 +38,10 @@ keys = generic
 level = WARN
 handlers = console
 
-[logger_phrasalappraisal]
+[logger_phrasal_appraisal]
 level = WARN
 handlers =
-qualname = phrasalappraisal
+qualname = phrasal_appraisal
 
 [handler_console]
 class = StreamHandler
